# OS_Labs

./: CMakeLists.txt
lab1/: CMakeLists.txt
lab1/src/: child.c  parent.c
lab2/: CMakeLists.txt
lab2/include/: functions.h
lab2/src/: functions.c  main.c
lab3/: CMakeLists.txt
lab3/include/: functions.h  status_codes.h
lab3/src/: child.c  parent.c  utils.c
lab4/: CMakeLists.txt
lab4/include/: contract.h
lab4/lib/: lib1_v1.c  lib1_v2.c  lib2_v1.c  lib2_v2.c
lab4/prog/: prog1_static.c  prog2_dynamic.c
